# PymesDataStrategyResumen

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: test.yml
api/: Dockerfile.dev  docker-entrypoint.sh  eslint.config.mjs  package.json  tsconfig.json  vitest.config.ts
api/src/: index.ts
api/src/application/use-cases/: GetAnomaliesUseCase.ts  GetCurrentUserUseCase.ts  GetStatsUseCase.ts  LoginUseCase.ts  RegisterUseCase.ts  SubmitDecisionsUseCase.ts  UpdateUserUseCase.ts  index.ts
api/src/domain/entities/: Anomaly.ts  Dataset.ts  TransformationJob.ts  User.ts  index.ts
api/src/domain/errors/: DomainError.ts  NotFoundError.ts  (+2 more)
api/tests/fixtures/: containers.ts
api/tests/integration/: container.integration.test.ts
docker/postgres/: init.sql
docs/: RESUMEN-PROYECTO.md
openspec/: config.yaml
openspec/changes/scaffolding-backend-mvp/: design.md  proposal.md  tasks.md
prisma/: schema.prisma
prisma/migrations/20260309011535_init/: migration.sql
prisma/migrations/20260313_add_hitl_tables/: migration.sql
worker/: Dockerfile.dev  README.md  pyproject.toml
worker/src/: __init__.py  main.py  py.typed
worker/src/application/dtos/: __init__.py
worker/src/application/transformations/: __init__.py  transformer.py
worker/src/application/use_cases/: process_dataset.py
worker/src/domain/entities/: __init__.py  anomaly.py  dataset.py  decision.py  transformation_job.py
worker/src/domain/errors/: __init__.py
worker/src/domain/ports/: __init__.py
worker/src/domain/ports/repositories/: __init__.py  dataset_repository.py  job_repository.py
worker/src/domain/ports/services/: __init__.py  job_queue_service.py  storage_service.py
worker/src/domain/value_objects/: __init__.py  job_status.py
worker/src/infrastructure/: __init__.py
worker/src/infrastructure/config/: __init__.py  container.py  settings.py
worker/src/infrastructure/http/: __init__.py  app.py
worker/src/infrastructure/http/routes/: __init__.py  health.py
worker/src/infrastructure/messaging/: __init__.py
worker/src/infrastructure/parsers/: __init__.py  dataset_parser.py
worker/src/infrastructure/persistence/: __init__.py  database.py  models.py  sqlalchemy_job_repository.py
worker/src/infrastructure/storage/: __init__.py  minio_storage_service.py
worker/tests/: __init__.py  conftest.py
worker/tests/application/transformations/: test_transformer.py
worker/tests/application/use_cases/: test_hitl_process_dataset.py
worker/tests/e2e/: test_etl_pipeline.py
worker/tests/fixtures/: containers.py
worker/tests/infrastructure/config/: test_container.py  test_settings.py
worker/tests/infrastructure/http/: test_app.py  test_health.py
worker/tests/infrastructure/persistence/: test_sqlalchemy_job_repository.py
worker/tests/integration/: test_container_integration.py
(+57 files in other folders)
